--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "java.project.sourcePaths": [],
+    "java.project.sourcePaths": ["src"],
     "java.project.referencedLibraries": [
         "lib\\mysql-connector-j-9.0.0.jar"
     ]
