--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,21 @@
     ],
     "java.project.referencedLibraries": [
         "lib\\mysql-connector-j-9.0.0.jar"
+    ],
+    "sqltools.connections": [
+        {
+            "mysqlOptions": {
+                "authProtocol": "default",
+                "enableSsl": "Disabled"
+            },
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "localhost1",
+            "database": "student_management",
+            "username": "root",
+            "password": ""
+        }
     ]
 }
