--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,8 @@
 {
     "java.project.sourcePaths": [
         ".",
-        "src\\GUIgrade",
-        "src\\GUIhomework",
-        "src\\guimenuteacher",
-        "src"
+        "src",
+        "src\\pics"
     ],
     "java.project.referencedLibraries": [
         "lib\\mysql-connector-j-9.0.0.jar"
