--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "java.project.sourcePaths": [
         ".",
         "src",
-        "src\\pics"
+        "src/pics"
     ],
     "java.project.referencedLibraries": [
         "lib\\mysql-connector-j-9.0.0.jar"
